Rewrote everything for use with the Axis camera

--- a/views/networktable.ejs
+++ b/views/networktable.ejs
@@ -29,9 +29,9 @@
 			</tr>
 		</thead>
 		<tbody>
-			<% for (var i = 0; i < exports.table.length; i++ ) 
+			<% for (var i = 0; i < table.length; i++ ) 
 			{
-				thisEntry = exports.table[i];
+				thisEntry = table[i];
 			%>
 			<tr>
 				<td><%= thisEntry.key %></td>
